# spectrominer

./: .gitignore  LICENSE  README.md  pyproject.toml  spectrominer.py
.github/workflows/: release.yml  test.yml
spectrominer/: analysis.py  corrections.py  errors.py  molecule_results.py  parser.py
spectrominer/corrections/: experimental.py  theoretical.py  util.py
spectrominer/parser/: __init__.py  analysis.py  file_selector_frame.py  main_frame.py  molecule_results.py  parser.py  util.py
spectrominer/ui/: app.py  correction_wizard.py  file_selector_frame.py  main_frame.py  popup.py
spectrominer/web/: app.py  file_selection.py  table.py
tests/: test_corrections.py  test_parser.py  test_util.py
tests/corrections/: test_experimental.py  test_theoretical.py  test_util.py
tests/data/: excel-data-example-1.xlsx  excel-data-example-2.xlsx  raw-data-example-1.csv  raw-data-example-2.csv  raw.csv
tests/parser/: test_parser.py  test_util.py
