[tool.poetry]
name = "spectrominer"
version = "0.0.3"
description = "Spectrominer is a software that allows you to apply corrections to mass spectrometry data."
authors = ["Gabriel Couture <gacou54@gmail.com>"]
readme = "README.md"
license = " BSD-3-Clause"
homepage = "https://github.com/ulaval-rs/spectrominer"
repository = "https://github.com/ulaval-rs/spectrominer"
keywords = ["isotope", "isotope correction"]

[tool.poetry.scripts]
spectrominer = "spectrominer.ui.app:start"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
matplotlib = "^3.4.1"
openpyxl = "^3.0.7"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
